samples/_failures_safe/1761478690_c8b5bc_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_e47a2d1e.c: In function ‘main’:
./samples/SAFE/__tmp_e47a2d1e.c:176:17: error: expected declaration or statement at end of input
  176 |                 break;
      |                 ^~~~~
./samples/SAFE/__tmp_e47a2d1e.c:176:17: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_e47a2d1e.c:176:17: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_e47a2d1e.c:176:17: error: expected declaration or statement at end of input
